feat(product image): get product image
