# internal/module/product/delivery/handlers.go
@@ -203,6 +203,24 @@ func (h *productHandlers) GetProductDetail(c *gin.Context) {
 	response.SuccessResponse(c.Writer, productDetail, http.StatusOK)
 }
 
+func (h *productHandlers) GetAllProductImage(c *gin.Context) {
+	productID := c.Param("product_id")
+	productImages, err := h.productUC.GetAllProductImage(c, productID)
+	if err != nil {
+		var e *httperror.Error
+		if !errors.As(err, &e) {
+			h.logger.Errorf("HandlerProduct, Error: %s", err)
+			response.ErrorResponse(c.Writer, response.InternalServerErrorMessage, http.StatusInternalServerError)
+			return
+		}
+
+		response.ErrorResponse(c.Writer, e.Err.Error(), e.Status)
+		return
+	}
+
+	response.SuccessResponse(c.Writer, productImages, http.StatusOK)
+}
+
 func (h *productHandlers) ValidateQueryRecommendProduct(c *gin.Context) *pagination.Pagination {
 	limit := strings.TrimSpace(c.Query("limit"))
 	page := strings.TrimSpace(c.Query("page"))
